--- a/src/webapp/WEB-INF/pages/users/new.html
+++ b/src/webapp/WEB-INF/pages/users/new.html
@@ -20,11 +20,11 @@
         <input type="text" th:field="*{email}" id="email"/>
         <br/>
         <br/>
-        <label for="lastName">Username</label>
+        <label for="username">Username</label>
         <input type="text" th:field="*{username}" id="username"/>
         <br/>
         <br/>
-        <label for="email">Password</label>
+        <label for="password">Password</label>
         <input type="text" th:field="*{password}" id="password"/>
         <br/>
         <br/>
